tests/baselines/reference/concatClassAndString.errors.txt
tests/cases/compiler/concatClassAndString.ts(4,1): error TS2539: Cannot assign to 'f' because it is not a variable.


==== tests/cases/compiler/concatClassAndString.ts (1 errors) ====
    // Shouldn't compile (the long form f = f + ""; doesn't):
    class f { }
    
    f += '';
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    